syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "users.proto";
option java_multiple_files = true;
option java_package = "via.sdj3.protobuf.users.admin";
option java_outer_classname = "AdminProto";

service AdminService {
  rpc AuthorizeSeller(ChangeSellerAuthorizationRequest) returns (ChangeSellerAuthorizationResponse);
  rpc ListSellers (ListUsersRequest) returns (ListUsersResponse);
}


message ListUsersResponse {
  repeated GrpcUser users = 1;
}

message ListUsersRequest {

}

message ChangeSellerAuthorizationRequest {
  int32 id = 1;
  bool authorizationState = 2;
}

message ChangeSellerAuthorizationResponse {
  string result = 1;
}